--- a/despacho-arquitectos/app/views/welcome/n_product.html.erb
+++ b/despacho-arquitectos/app/views/welcome/n_product.html.erb
@@ -5,7 +5,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <!-- fin links bootstrap -->
 <div class="container col-lg-6">
-	<form>
+	<form action="/registrar_material" method="post">
 	  <div class="form-group">
 	    <h2 class="centrado"><label>Dar de alta material</label></h2>
 	    <label>Nombre</label>
