--- a/despacho-arquitectos/app/views/almacens/index.html.erb
+++ b/despacho-arquitectos/app/views/almacens/index.html.erb
@@ -5,41 +5,47 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-
-<h1>Almacens</h1>
-<%= link_to 'Nuevo almacen', new_almacen_path %>
-<table class="table table-hover" >
-  <thead>
-    <tr>
-      <th scope="col">Nombre</th>
-      <th scope="col">Descripcion</th>
-      <th scope="col">Direccion</th>
-      <th scope="col">Codigo postal</th>
-      <th scope="col">Ciudad</th>
-      <th scope="col">Estado almacen</th>
-      <th scope="col">Pais</th>
-      <th scope="col" colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @almacens.each do |almacen| %>
+<div class="container">
+  <h1>Almacens</h1>
+  <%= link_to 'Nuevo almacen', new_almacen_path, :class => "btn btn-secondary " %>
+  <table class="table table-hover" style="background-color: white;">
+    <thead>
       <tr>
-        <td><%= almacen.nombre %></td>
-        <td><%= almacen.descripcion %></td>
-        <td><%= almacen.direccion %></td>
-        <td><%= almacen.codigo_postal %></td>
-        <td><%= almacen.ciudad %></td>
-        <td><%= almacen.estado_almacen %></td>
-        <td><%= almacen.pais %></td>
-        <td><%= link_to 'Ver', almacen %></td>
-        <td><%= link_to 'Editar', edit_almacen_path(almacen) %></td>
-        <td><%= link_to 'Elimnar', almacen, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th scope="col">Nombre</th>
+        <th scope="col">Descripcion</th>
+        <th scope="col">Direccion</th>
+        <th scope="col">Codigo postal</th>
+        <th scope="col">Ciudad</th>
+        <th scope="col">Estado almacen</th>
+        <th scope="col">Pais</th>
+        <th scope="col" colspan="3">Opciones</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @almacens.each do |almacen| %>
+        <tr>
+          <td><%= almacen.nombre %></td>
+          <td><%= almacen.descripcion %></td>
+          <td><%= almacen.direccion %></td>
+          <td><%= almacen.codigo_postal %></td>
+          <td><%= almacen.ciudad %></td>
+          <td><%= almacen.estado_almacen %></td>
+          <td><%= almacen.pais %></td>
+          <td><%= link_to 'Ver', almacen, :class => "btn btn-info" %></td>
+          <td><%= link_to 'Editar', edit_almacen_path(almacen),:class => "btn btn-warning " %></td>
+          <td><%= link_to 'Elimnar', almacen, method: :delete, data: { confirm: 'Are you sure?' },:class => "btn btn-danger " %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <br>
+</div>
 
 
+<style type="text/css">
+  body{
+    background-color: #8b8d8e;
+  }
+</style>
