--- a/despacho-arquitectos/app/views/profesional/editar.html.erb
+++ b/despacho-arquitectos/app/views/profesional/editar.html.erb
@@ -21,7 +21,7 @@
 
 <div class="container"></div>
 	<center>
-		<h1>Directorio de Profesionistas <span class="badge badge-secondary">Actualizar Tercero</span></h1>
+		<h1>Directorio de Profesionistas <span class="badge badge-secondary">Actualizar Profesionista</span></h1>
 	</center>
 	<form action="/editar_p" method="post" id="myform">
 		<div class="container">
