--- a/despacho-arquitectos/app/views/services/index.html.erb
+++ b/despacho-arquitectos/app/views/services/index.html.erb
@@ -1,43 +1,85 @@
+<!-- links bootstrap -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!-- fin links bootstrap -->
+<!--  links font awensome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+<!-- fin links font awensome -->
+
 <p id="notice"><%= notice %></p>
 
-<h1>Services</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Idservicio</th>
-      <th>Etiquetaservicio</th>
-      <th>Estadoventa</th>
-      <th>Estadocompra</th>
-      <th>Descripcion</th>
-      <th>Duracion</th>
-      <th>Precioventa</th>
-      <th>Precioventamin</th>
-      <th>Categoria</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @services.each do |service| %>
-      <tr>
-        <td><%= service.idservicio %></td>
-        <td><%= service.etiquetaservicio %></td>
-        <td><%= service.estadoventa %></td>
-        <td><%= service.estadocompra %></td>
-        <td><%= service.descripcion %></td>
-        <td><%= service.duracion %></td>
-        <td><%= service.precioventa %></td>
-        <td><%= service.precioventamin %></td>
-        <td><%= service.categoria %></td>
-        <td><%= link_to 'Show', service %></td>
-        <td><%= link_to 'Edit', edit_service_path(service) %></td>
-        <td><%= link_to 'Destroy', service, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div class="container col-lg-11 bg-light">
+  <div class="form-group">
+    <h1>Servicios</h1>
+    <%= button_to new_service_path, method: :get, class: 'btn btn-secondary' do %>
+      <i class="fas fa-plus"></i> Nuevo
     <% end %>
-  </tbody>
-</table>
+  </div>
+  
+  <div class="form-group row">
+  <table class="table table-bordered table-striped table-sm">
+    <thead class="thead-light">
+      <tr>
+        <th>Opciones</th>
+        <th>Id Servicio</th>
+        <th>Etiqueta Servicio</th>
+        <th>Estado de Venta</th>
+        <th>Estado de Compra</th>
+        <th>Descripción</th>
+        <th>Duración</th>
+        <th>Precio de Venta</th>
+        <th>Precio de Venta Minímo</th>
+        <th>Categoría</th>
+      </tr>
+    </thead>
 
+    <tbody>
+      <% @services.each do |service| %>
+        <tr>
+          <td class= "d-inline-flex">
+            <div class= "mr-2"><%= button_to edit_service_path(service), method: :get, class: 'btn btn-warning btn-sm' do %>
+              <i class="fas fa-pencil-alt"></i>
+            <% end %></div>
+            <%# <%= link_to 'Show', service %> 
+            <div ><%= button_to service, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' do %>
+            <i class="far fa-trash-alt"></i>
+            <% end %></div>
+          </td>
+          <td><%= service.idservicio %></td>
+          <td><%= service.etiquetaservicio %></td>
+          <td><%= service.estadoventa %></td>
+          <td><%= service.estadocompra %></td>
+          <td><%= service.descripcion %></td>
+          <td><%= service.duracion %></td>
+          <td><%= service.precioventa %></td>
+          <td><%= service.precioventamin %></td>
+          <td><%= service.categoria %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 <br>
 
-<%= link_to 'New Service', new_service_path %>
+  <ul class="pagination">
+    <li class="page-item">
+        <a class="page-link" href="#">Ant</a>
+    </li>
+    <li class="page-item active" style="background-color: #C2E3f4">
+        <a class="page-link" style="background-color: #C2E3f4" href="#">1</a>
+    </li>
+    <li class="page-item">
+        <a class="page-link" href="#">2</a>
+    </li>
+    <li class="page-item">
+        <a class="page-link" href="#">3</a>
+    </li>
+    <li class="page-item">
+        <a class="page-link" href="#">4</a>
+    </li>
+    <li class="page-item">
+        <a class="page-link" href="#">Sig</a>
+    </li>
+</ul>
+</div>
