--- a/despacho-arquitectos/app/views/categories/index.html.erb
+++ b/despacho-arquitectos/app/views/categories/index.html.erb
@@ -6,59 +6,50 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <p id="notice"><%= notice %></p>
 
-<h1 class="bg-info">Categories</h1>
-
-<table>
-  <thead>
+<div id="fondo">
+<h1 >Categorias</h1>
+<%= button_to  new_category_path, method: :get, class: 'btn btn-secondary' do %>
+  <i class="fas fa-plus-circle"></i> Nuevo
+<% end %>
+<table class="table table-bordered table-striped table-sm col-sm-6">
+  <thead class="bg-white col-sm-4" >
     <tr>
-      <th>Idcategorias</th>
-      <th>Nombre</th>
-      <th colspan="3"></th>
+      <th  >Opciones</th>
+      <th >Id</th>
+      <th >Nombre</th>
     </tr>
   </thead>
 </form>
-  <tbody class="bg-secondary">
+  <tbody id="cuerpo" class="bg-light">
     <% @categories.each do |category| %>
       <tr>
-        <td><%= category.idcategorias %></td>
-        <td><%= category.nombre %></td>
-       
-        <td><!-- Ver -->
-          <%= button_to category, method: :get, class: 'btn btn-info' do %>
-            <i class="fas fa-pen"></i>
-          <% end %>
-        </td>
-        <td><!-- Modificar -->
+      <td class="d-inline-flex">
+      <!-- Modificar -->
           <%= button_to  edit_category_path(category), method: :get, class: 'btn btn-warning' do %>
             <i class="fas fa-pen"></i>
           <% end %>
-        </td>
-        <td><!-- Eliminar -->
-          <%= button_to  category, method: :delete, data: { confirm: 'Are you sure?' }, method: :get, class: 'btn btn-danger' do %>
-            <i class="fas fa-pen"></i>
+        <!-- Eliminar -->
+        <%= button_to  category, method: :delete, data: { confirm: 'Are you sure?' }, method: :get, class: 'btn btn-danger' do %>
+            <i class="far fa-trash-alt"></i>
           <% end %>
-        </td>
-       
-        </td>
+         </td>
+        <td ><%= category.idcategorias %></td>
+        <td><%= category.nombre %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= button_to new_category_path, method: :get, class: 'btn btn-success' do %>
-  <i class="fas fa-pen"></i>
-<% end %>
+</div>
 
 <style>
-h1{
-  color: black;
+#cuerpo{
+  background-color:#929CA6;  
 }
-#encabezado{
-  background-color:lightblue;
-}
-#encabezado_tabla{
-  background-color:lightgray;
+#fondo{
+  background-color:#E2F1D1;  
+  height:100%;
 }
 </style>
+
