--- a/despacho-arquitectos/app/views/services/new.html.erb
+++ b/despacho-arquitectos/app/views/services/new.html.erb
@@ -1,5 +1,20 @@
-<h1>New Service</h1>
+<!-- links bootstrap -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!-- fin links bootstrap -->
+<!--  links font awensome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+<!-- fin links font awensome -->
 
-<%= render 'form', service: @service %>
-
-<%= link_to 'Back', services_path %>
+<div class="container col-lg-11 bg-light">
+    <div class="modal-content">
+        <div class="modal-header" style="background-color: #C2E3f4">
+            <h4 class="modal-title">Agregar Servicio</h4>
+            <%= link_to services_path, method: :get, class: 'btn btn-secondary close' do  %>
+                <i class="fas fa-arrow-left"></i>
+            <% end %>
+            
+        </div>
+    </div>
+    <%= render 'form', service: @service %>
+</div>
