--- a/despacho-arquitectos/app/views/services/_form.html.erb
+++ b/despacho-arquitectos/app/views/services/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(model: service, local: true) do |form| %>
+ 
+    <%= form_with(model: service, local: true) do |form| %>
   <% if service.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(service.errors.count, "error") %> prohibited this service from being saved:</h2>
@@ -11,52 +12,58 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :idservicio %>
-    <%= form.text_field :idservicio, id: :service_idservicio %>
-  </div>
+<div class="modal-body">
+        <form action="" method="post" enctype="multipart/form-data" class="form-horizontal">
+      <div class="form-group row">
+        <%# <%= form.label :idservicio %>
+        <label class="col-md-3 form-control-label" for="select">Clave Servicio: </label>
+        <%= form.text_field :idservicio, id: :service_idservicio, class: 'form-control' %>
+      </div>
 
-  <div class="field">
-    <%= form.label :etiquetaservicio %>
-    <%= form.text_field :etiquetaservicio, id: :service_etiquetaservicio %>
-  </div>
+      <div class="form-group row">
+        <label class="col-md-3 form-control-label" for="select">Etiqueta Servicio: </label>
+        <%# <%= form.label :etiquetaservicio %>
+        <%= form.text_field :etiquetaservicio, id: :service_etiquetaservicio, class: 'form-control' %>
+      </div>
 
-  <div class="field">
-    <%= form.label :estadoventa %>
-    <%= form.text_field :estadoventa, id: :service_estadoventa %>
-  </div>
+      <div class="form-group row">
+        <%= form.label :estadoventa %>
+        <%= form.text_field :estadoventa, id: :service_estadoventa, class: 'form-control'  %>
+      </div>
 
-  <div class="field">
-    <%= form.label :estadocompra %>
-    <%= form.text_field :estadocompra, id: :service_estadocompra %>
-  </div>
+      <div class="form-group row">
+        <%= form.label :estadocompra %>
+        <%= form.text_field :estadocompra, id: :service_estadocompra, class: 'form-control'  %>
+      </div>
 
-  <div class="field">
-    <%= form.label :descripcion %>
-    <%= form.text_area :descripcion, id: :service_descripcion %>
-  </div>
+      <div class="form-group row">
+        <%= form.label :descripcion %>
+        <%= form.text_area :descripcion, id: :service_descripcion, class: 'form-control'  %>
+      </div>
 
-  <div class="field">
-    <%= form.label :duracion %>
-    <%= form.number_field :duracion, id: :service_duracion %>
-  </div>
+      <div class="form-group row">
+        <%= form.label :duracion %>
+        <%= form.number_field :duracion, id: :service_duracion, class: 'form-control'  %>
+      </div>
 
-  <div class="field">
-    <%= form.label :precioventa %>
-    <%= form.text_field :precioventa, id: :service_precioventa %>
-  </div>
+      <div class="form-group row">
+        <%= form.label :precioventa %>
+        <%= form.text_field :precioventa, id: :service_precioventa, class: 'form-control'  %>
+      </div>
 
-  <div class="field">
-    <%= form.label :precioventamin %>
-    <%= form.text_field :precioventamin, id: :service_precioventamin %>
-  </div>
+      <div class="form-group row">
+        <%= form.label :precioventamin %>
+        <%= form.text_field :precioventamin, id: :service_precioventamin, class: 'form-control'  %>
+      </div>
 
-  <div class="field">
-    <%= form.label :categoria %>
-    <%= form.text_field :categoria, id: :service_categoria %>
-  </div>
+      <div class="form-group row">
+        <%= form.label :categoria %>
+        <%= form.text_field :categoria, id: :service_categoria , class: 'form-control' %>
+      </div>
 
-  <div class="actions">
-    <%= form.submit %>
+      <div class="actions">
+        <%= form.submit %>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
